tests/ui/field.stderr
error: #[untagged] at an invalid position
 --> $DIR/field.rs:8:9
  |
8 |         #[untagged]
  |         ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:13:15
   |
13 |     struct S2(#[tag = 1] String);
   |               ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:16:15
   |
16 |     struct S3(#[optional] String);
   |               ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:19:15
   |
19 |     struct S4(#[untagged] String);
   |               ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:24:9
   |
24 |         #[tag = 0]
   |         ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:31:9
   |
31 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:38:9
   |
38 |         #[optional]
   |         ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:48:9
   |
48 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:53:15
   |
53 |     struct S2(#[tag = 1] String);
   |               ^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:56:15
   |
56 |     struct S3(#[optional] String);
   |               ^^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:59:15
   |
59 |     struct S4(#[untagged] String);
   |               ^^^^^^^^^^^

error: #[tag] at an invalid position
  --> $DIR/field.rs:64:9
   |
64 |         #[tag = 0]
   |         ^^^^^^^^^^

error: #[untagged] at an invalid position
  --> $DIR/field.rs:71:9
   |
71 |         #[untagged]
   |         ^^^^^^^^^^^

error: #[optional] at an invalid position
  --> $DIR/field.rs:78:9
   |
78 |         #[optional]
   |         ^^^^^^^^^^^
